--- a/src/KillVSNode/project.json
+++ b/src/KillVSNode/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-alpha4",
+  "version": "1.0.0",
   "description": "An app to kill node process spawn by Visual Studio (devenv).",
   "authors": [ "Giovanni Bassi" ],
   "tags": [ "" ],
